# qualify

./: .gitignore  .pylintrc  .readthedocs.yaml  CONTRIBUTING.md  README.md  USAGE.md  pyproject.toml
.github/workflows/: pr-post-merge.yml  prepare-release.yml
.redport/: manifest.rpt.json
.redport/cookiecutter_replay/: cookiecutter-python-package.json
contrib/archlinux/python-qualify/: PKGBUILD
contrib/archlinux/python-qualify-git/: PKGBUILD
contrib/archlinux/python-qualify-local/: .gitignore  PKGBUILD
debian/: changelog  control  copyright  python-qualify.manpages  qualify.manpages  rules
doc/: requirements.txt
doc/sphinx/: conf.py  index.md  index.rst
python_qualify/: __init__.py  api.py  clone.py  config.py  finder.py  loader.py  settings.py  version.py
qualify/: __init__.py  api.py  loader.py
tests/: test_api.py  test_clone.py
tests/fixtures/ab/: __init__.py  a.py  b.py
